<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    >

    <RelativeLayout
        android:id="@+id/test_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_ground_color">

        <TextView
            android:id="@+id/test_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="22sp"
            android:textColor="#ffffffff"
            android:text="@string/test_title_text"
            />
        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="@drawable/btn_press"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="16sp"
            android:text="@string/back_btn"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/test_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_press"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="16sp"
            android:text="@string/test_btn"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <TextView
        android:id="@+id/test_bluetooth_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/test_title"
        android:textSize="18sp"
        android:textColor="#ffff2821"
        />

</RelativeLayout>